[package]
name = "duck2spark"
version = "0.2.0"
edition = "2021"

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.4.18"
default-features = false
features = ["std", "help", "usage", "color", "suggestions", "cargo", "derive", "wrap_help"]
